sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:17: error: ambiguous reference to overloaded definition,
both method + in class Int of type (x: Char)Int
and  method + in class Int of type (x: Byte)Int
match expected type ?
      i+ = 1
       ^